# vimlrs

./: BUGS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
completions/: _viml
csrc/: buffer.c  buffer_defs.h  ops.c  option.c  pos_defs.h  types_defs.h  window.h
docs/: hud-theme.js  index.html  reference.html  report.html
editors/intellij/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
editors/intellij/src/main/kotlin/com/menketechnologies/vimlrs/: VimlrsBraceMatcher.kt  VimlrsColorSettingsPage.kt  VimlrsColors.kt  VimlrsCommenter.kt  VimlrsDebugLog.kt  VimlrsFileType.kt  VimlrsIcons.kt  VimlrsLanguage.kt  VimlrsLexer.kt  VimlrsParserDefinition.kt  VimlrsQuoteHandler.kt  VimlrsSettings.kt  VimlrsSettingsConfigurable.kt  VimlrsSmartEnterProcessor.kt  VimlrsSpellcheckingStrategy.kt  VimlrsSyntaxHighlighter.kt  VimlrsTokenTypes.kt  VimlrsTypedHandler.kt
editors/intellij/src/main/kotlin/com/menketechnologies/vimlrs/actions/: CreateVimlrsFileAction.kt  RunVimlrsFileAction.kt
editors/intellij/src/main/kotlin/com/menketechnologies/vimlrs/dap/: VimlrsBreakpointHandler.kt  VimlrsBreakpointType.kt  VimlrsDapClient.kt  VimlrsDebugProcess.kt  VimlrsDebuggerEditorsProvider.kt  VimlrsEvaluator.kt  VimlrsStackFrame.kt  VimlrsSuspendContext.kt  VimlrsValue.kt
editors/intellij/src/main/kotlin/com/menketechnologies/vimlrs/lsp/: VimlrsLspServerDescriptor.kt  VimlrsLspServerSupportProvider.kt
editors/intellij/src/main/kotlin/com/menketechnologies/vimlrs/navigate/: VimlrsGotoDeclarationHandler.kt
editors/intellij/src/main/kotlin/com/menketechnologies/vimlrs/refactor/: VimlrsRefactoringSupportProvider.kt  VimlrsRenameHandler.kt
editors/intellij/src/main/kotlin/com/menketechnologies/vimlrs/run/: VimlrsDebugRunner.kt  VimlrsProgramRunner.kt  VimlrsRunConfiguration.kt  VimlrsRunConfigurationEditor.kt  VimlrsRunConfigurationOptions.kt  VimlrsRunConfigurationProducer.kt  VimlrsRunConfigurationType.kt
editors/intellij/src/test/kotlin/com/menketechnologies/vimlrs/: VimlrsCommenterTest.kt  VimlrsLexerTest.kt  VimlrsSettingsTest.kt  VimlrsSmartEnterProcessorTest.kt
examples/: README.md  arglist.vim  autocommands.vim  autoload.vim  beeps.vim  bitops.vim  blob_bytes.vim  blobs.vim  buffer.vim  buffers.vim  builtin_arity.vim  closures.vim  cmdline.vim  coerce_arith.vim  colornames.vim  command_abbreviations.vim  compare.vim  completion.vim  concat_dot.vim  count_types.vim  date_format.vim  default_args.vim  defer.vim  deferred_function.vim  delfunction.vim  dict_deepcopy.vim  dict_ops.vim  digraphs.vim  dot_operator.vim  editor_absent.vim  editor_compat.vim  editor_queries.vim  env_vars.vim  equalfile.vim  error_exceptions.vim  error_output.vim  exceptions.vim  excommands.vim  execute_capture.vim  expand.vim  (+124 more)
examples/lib/: mathlib.vim  scope_child.vim  sfile_helper.vim
man/man1/: viml.1  vimlall.1  vimlrs.1  vimlrsall.1
scripts/: gen_builtin_argc.sh  gen_c_functions.sh  gen_port_stubs.sh  run_examples.sh
src/: aot.rs  banner.rs  builtin_docs.rs  cli.rs  compile_viml.rs  dap.rs  fusevm_bridge.rs  fusevm_disasm.rs  hashtab_map.rs  intercepts.rs  lib.rs  lsp.rs  main.rs  ported.rs  repl.rs  rust_ffi.rs  script_cache.rs  viml_ast.rs  viml_json.rs  viml_lexer.rs  viml_parser.rs  viml_regex.rs
src/ported/: buffer.rs  charset.rs  eval.rs  eval_h.rs  ex_eval.rs  grid.rs  hashtab.rs  keycodes.rs  mark.rs  mbyte.rs  message.rs  mpack.rs  ops.rs  option.rs  option_optval.rs  path.rs  plines.rs  profile.rs  search.rs  sha256.rs  strings.rs  window.rs
src/ported/eval/: buffer.rs  decode.rs  encode.rs  executor.rs  fs.rs  funcs.rs  funcs_argc.rs  list.rs  typval.rs  typval_defs_h.rs  typval_encode_h.rs  userfunc.rs  vars.rs  window.rs
src/ported/os/: dl.rs  env.rs  fileio.rs  lang.rs  mod.rs  time.rs
src/ported/stubs/: buffer.rs  decode.rs  deprecated.rs  encode.rs  eval.rs  ex_eval.rs  executor.rs  fs.rs  funcs.rs  list.rs  mod.rs  typval.rs  userfunc.rs  vars.rs  window.rs
tests/: examples.rs  ffi.rs  fuzz_corpus.rs  intercepts.rs  ported_fn_names_match_c.rs
tests/data/: fake_fn_allowlist.txt  fuzz_corpus.txt
tests/fixtures/: interactive.in
